-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 12
-
Component/s: hotspot
-
b18
-
x86_64
-
linux_ubuntu
The following test failed due to an exception on Linux-X64
in a fastdebug and a slowdebug config using jdk-12+16 bits:
jdk/jfr/event/gc/detailed/TestPromotionEventWithG1.java
The test only failed in 1 of 3 'fastdebug' bits runs and 1 of 3
'slowdebug' bits runs so I'm tagging this bug as intermittent.
It did not fail at all in the 'release' bits runs.
Here's a snippet from one of the log files:
----------System.out:(0/0)----------
----------System.err:(65/2436)----------
java.lang.RuntimeException: PLAB size is smaller than object size. Event: PromoteObjectInNewPLAB {
startTime = 21955328706
eventThread = {
osName = "GC Thread#2"
osThreadId = 24965
javaName = null
javaThreadId = 0
group = null
}
gcId = 36
objectClass = {
classLoader = {
type = null
name = "bootstrap"
}
name = "[B"
package = null
modifiers = 0
}
objectSize = 144
tenuringAge = 1
tenured = true
plabSize = 24
}
: expected true, was false
at jdk.test.lib.Asserts.fail(Asserts.java:594)
at jdk.test.lib.Asserts.assertTrue(Asserts.java:486)
at jdk.jfr.event.gc.detailed.PromotionEvent.verifyPromotionSampleEvents(PromotionEvent.java:173)
at jdk.jfr.event.gc.detailed.PromotionEvent.test(PromotionEvent.java:140)
at jdk.jfr.event.gc.detailed.TestPromotionEventWithG1.main(TestPromotionEventWithG1.java:42)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:566)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:835)
JavaTest Message: Test threw exception: java.lang.RuntimeException: PLAB size is smaller than object size. Event: PromoteObjectInNewPLAB {
startTime = 21955328706
eventThread = {
osName = "GC Thread#2"
osThreadId = 24965
javaName = null
javaThreadId = 0
group = null
}
gcId = 36
objectClass = {
classLoader = {
type = null
name = "bootstrap"
}
name = "[B"
package = null
modifiers = 0
}
objectSize = 144
tenuringAge = 1
tenured = true
plabSize = 24
}
: expected true, was false
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.RuntimeException: PLAB size is smaller than object size. Event: PromoteObjectInNewPLAB { startTime = 21955328706 eventThread = { osName = "GC Thread#2" osThreadId = 24965 javaName = null javaThreadId = 0 group = null } gcId = 36 objectClass = { classLoader = { type = null name = "bootstrap" } name = "[B" package = null modifiers = 0 } objectSize = 144 tenuringAge = 1 tenured = true plabSize = 24 } : expected true, was false
----------rerun:(40/4410)*----------
in a fastdebug and a slowdebug config using jdk-12+16 bits:
jdk/jfr/event/gc/detailed/TestPromotionEventWithG1.java
The test only failed in 1 of 3 'fastdebug' bits runs and 1 of 3
'slowdebug' bits runs so I'm tagging this bug as intermittent.
It did not fail at all in the 'release' bits runs.
Here's a snippet from one of the log files:
----------System.out:(0/0)----------
----------System.err:(65/2436)----------
java.lang.RuntimeException: PLAB size is smaller than object size. Event: PromoteObjectInNewPLAB {
startTime = 21955328706
eventThread = {
osName = "GC Thread#2"
osThreadId = 24965
javaName = null
javaThreadId = 0
group = null
}
gcId = 36
objectClass = {
classLoader = {
type = null
name = "bootstrap"
}
name = "[B"
package = null
modifiers = 0
}
objectSize = 144
tenuringAge = 1
tenured = true
plabSize = 24
}
: expected true, was false
at jdk.test.lib.Asserts.fail(Asserts.java:594)
at jdk.test.lib.Asserts.assertTrue(Asserts.java:486)
at jdk.jfr.event.gc.detailed.PromotionEvent.verifyPromotionSampleEvents(PromotionEvent.java:173)
at jdk.jfr.event.gc.detailed.PromotionEvent.test(PromotionEvent.java:140)
at jdk.jfr.event.gc.detailed.TestPromotionEventWithG1.main(TestPromotionEventWithG1.java:42)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:566)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:835)
JavaTest Message: Test threw exception: java.lang.RuntimeException: PLAB size is smaller than object size. Event: PromoteObjectInNewPLAB {
startTime = 21955328706
eventThread = {
osName = "GC Thread#2"
osThreadId = 24965
javaName = null
javaThreadId = 0
group = null
}
gcId = 36
objectClass = {
classLoader = {
type = null
name = "bootstrap"
}
name = "[B"
package = null
modifiers = 0
}
objectSize = 144
tenuringAge = 1
tenured = true
plabSize = 24
}
: expected true, was false
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.RuntimeException: PLAB size is smaller than object size. Event: PromoteObjectInNewPLAB { startTime = 21955328706 eventThread = { osName = "GC Thread#2" osThreadId = 24965 javaName = null javaThreadId = 0 group = null } gcId = 36 objectClass = { classLoader = { type = null name = "bootstrap" } name = "[B" package = null modifiers = 0 } objectSize = 144 tenuringAge = 1 tenured = true plabSize = 24 } : expected true, was false
----------rerun:(40/4410)*----------
- relates to
-
JDK-8210492 PLAB object promotion events report object sizes in words
-
- Resolved
-
-
JDK-8216316 Tests fail due to too low specified TLAB size
-
- Resolved
-