8212766: TestPromotionEventWithG1.java failed due to "RuntimeException: PLAB size is smaller than object size."

Also send PLAB size in bytes, not in heap words.

Reviewed-by: shade, sjohanss